devsecops/k8s-templates/opa-gatekeeper/baseline-constraints/azure-block-automount.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureBlockAutomountToken
metadata:
  name: azure-block-automount
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["kube-system", "gatekeeper-system", "monitoring", "linkerd", "ingress", "devops-addons", "dev"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
