devsecops/k8s-templates/opa-gatekeeper/baseline-constraints/container-allowed-capabilities.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureAllowedCapabilities
metadata:
  name: container-allowed-capabilities
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["kube-system", "gatekeeper-system", "monitoring", "linkerd", "ingress", "devops-addons"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    allowedCapabilities: []
    requiredDropCapabilities: ["NET_ADMIN", "SYS_TIME"]
