devsecops/k8s-templates/opa-gatekeeper/baseline-constraints/container-no-privilege.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureContainerNoPrivilege
metadata:
  name: container-no-privilege
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["kube-system", "gatekeeper-system", "monitoring", "linkerd"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
