devsecops/k8s-templates/opa-gatekeeper/baseline-constraints/k8sallowedrepos_constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: repo-must-match-acr
spec:
  enforcementAction: deny
  match:
    namespaces: ["dev"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    #namespaces:
      #- "production"
  parameters:
    repos:
      - "aksacrdev01.azurecr.io"
