devsecops/k8s-templates/opa-gatekeeper/baseline-constraints/k8scontainterlimits_constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata:
  name: container-must-have-limits
spec:
  enforcementAction: dryrun
  match:
    namespaces: ["dev"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    cpu: "200m"
    memory: "1Gi"

#https://github.com/open-policy-agent/gatekeeper/issues/316 -- deployment doesnt work for container limits(coz its for containers not deployments) template/constraint though.
