devsecops/k8s-templates/opa-gatekeeper/baseline-constraints/k8srequiredlabels_constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: must-have-nodepool-label
spec:
  enforcementAction: dryrun
  match:
    namespaces: ["dev"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    message: "All namespaces must have an `owner` label that points to your company username"
    labels:
      - key: nodePool
        
        #allowedRegex: "^[a-zA-Z]+.agilebank.demo$"
#https://www.magalix.com/blog/integrating-open-policy-agent-opa-with-kubernetes-a-deep-dive-tutorial
